# ncnn-webassembly-yolov5

./: CMakeLists.txt  README.md  index.html  wasmFeatureDetect.js  yolov5-basic.js  yolov5-basic.wasm  yolov5-simd-threads.js  yolov5-simd-threads.wasm  yolov5-simd.js  yolov5-simd.wasm  yolov5-threads.data  yolov5-threads.js  yolov5-threads.wasm  yolov5-threads.worker.js  yolov5.cpp  yolov5.h  yolov5ncnn.cpp
.github/workflows/: release.yml
assets/: yolov5n.ncnn.param
